tests/invalid/ifstatements.nim
# Count: 2
# Negative count: 0

let a = 0

if a != 1:
  echo "not equal"
else:
  echo "equal"

if a == 0:
  discard
